--- a/style.css
+++ b/style.css
@@ -98,5 +98,6 @@ div.questions a.btn:hover {
 footer {
   border-top: 1px solid #CCC;
   margin-top: 80px;
-  padding-top: 
+  padding-top: 20px;
+  
 }
