--- a/style.css
+++ b/style.css
@@ -75,6 +75,10 @@ div.questions {
   padding: 0 20px 0 20px;
 }
 
+div.questions p {
+  
+}
+
 div.questions h4 {
   font-size: 30px;
   margin-bottom: 10px;
